--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/static/iconfont.css">
   <link href="/static/css/app.1ace94ea49c099c26fed35757b781968.css" rel="stylesheet">
   <script>
-    console.log(Object.keys(window))
+    // console.log(Object.keys(window))
     window.__GLOBAL__ = { initialVariables: Object.keys(window).concat(["__GLOBAL__"]), baseVariables: {} }
   </script>
 </head>
