--- a/test/sandbox.html
+++ b/test/sandbox.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: 
+ * @Author: caiwu
+ * @CreateDate: 
+ * @LastEditor: 
+ * @LastEditTime: 2021-07-20 11:11:23
+-->
 <!DOCTYPE html>
 <html>
 
@@ -32,12 +39,19 @@ function proxyObj(target) {
       if (key === Symbol.unscopables) {
         return undefined;
       }   
+      if (key === 'WINDOW') {
+        console.log('get WINDOW');
+      }
       console.log('getter:','window.'+key);
       if (ignoreList.includes(key)) {
         return Reflect.get(target, key).bind(null)
       }
       if (key === 'window' || key === 'self') {
         return window
+      }
+      if (key === 'WINDOW') {
+        console.log('get WINDOW');
+        return target
       }
       return Reflect.get(window, key) || Reflect.get(target, key)
     },
@@ -65,54 +79,7 @@ function createSandbox(src, target) {
 }
 
 // 在沙箱中运行测试代码
-let source = `!(function(r) {
-  console.log('最先执行的js');
-  var n = window.webpackJsonp;
-  window.webpackJsonp = function(e, u, c) {
-    for (var p, f, i, a = 0, l = []; a < e.length; a++)
-      (f = e[a]), o[f] && l.push(o[f][0]), (o[f] = 0);
-    for (p in u) Object.prototype.hasOwnProperty.call(u, p) && (r[p] = u[p]);
-    for (n && n(e, u, c); l.length; ) l.shift()();
-    if (c) for (a = 0; a < c.length; a++) i = t((t.s = c[a]));
-    return i;
-  };
-  var e = {},
-    o = { 2: 0 };
-  function t(n) {
-    if (e[n]) return e[n].exports;
-    var o = (e[n] = { i: n, l: !1, exports: {} });
-    return r[n].call(o.exports, o, o.exports, t), (o.l = !0), o.exports;
-  }
-  (t.m = r),
-    (t.c = e),
-    (t.d = function(r, n, e) {
-      t.o(r, n) ||
-        Object.defineProperty(r, n, {
-          configurable: !1,
-          enumerable: !0,
-          get: e
-        });
-    }),
-    (t.n = function(r) {
-      var n =
-        r && r.__esModule
-          ? function() {
-              return r.default;
-            }
-          : function() {
-              return r;
-            };
-      return t.d(n, "a", n), n;
-    }),
-    (t.o = function(r, n) {
-      return Object.prototype.hasOwnProperty.call(r, n);
-    }),
-    (t.p = "/app1"),
-    (t.oe = function(r) {
-      throw (console.error(r), r);
-    });
-})([]);
-webpackJsonp({},[],[])`
+let source = `!function(){console.log(WINDOW)}()`
 
 let sandbox = createSandbox(source,window)
 </script>
