--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: 
+ * @Author: caiwu
+ * @CreateDate: 
+ * @LastEditor: 
+ * @LastEditTime: 2021-08-16 16:50:38
+-->
 <!DOCTYPE html>
 <html lang="">
 
@@ -23,5 +30,7 @@
   <div id="app2"></div>
   <!-- built files will be auto injected -->
 </body>
-
+<script>
+   window.addEventListener('hashchange',()=>{console.log(232323);});
+</script>
 </html>
