--- a/test/bank.html
+++ b/test/bank.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: 
+ * @Author: caiwu
+ * @CreateDate: 
+ * @LastEditor: 
+ * @LastEditTime: 2021-08-31 14:03:27
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,10 +13,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .content{
+            height: 300vh;
+        }
+        body {
+            background-image: linear-gradient(to right top, #ffcc00 50%, #eee 50%);
+            background-size: 100% calc(100% - 100vh + 5px);
+            background-repeat: no-repeat;
+        }
+        body::after {
+            content: "";
+            position: fixed;
+            top: 5px;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: #fff;
+            z-index: -1;
+            }
+    </style>
 </head>
 
 <body>
-
+    <div class="content">aaaaaaaaaaaaaaaa</div>
 </body>
-
 </html>
